gcc/testsuite/rust/rustc/ui/parser/do-not-suggest-semicolon-between-macro-without-exclamation-mark-and-array_dg.rs
fn main() {
    let _x = vec[1, 2, 3]; // { dg-error "" "" { target *-*-* } }
}

